fixed webpage alignment with flex, added styling

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,10 +5,14 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 img {
   width: 600px;
+  margin-bottom: 16px;
 }
 
 button {
@@ -16,6 +20,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 8px 16px 8px 16px;
 }
 
 input {
@@ -24,4 +29,49 @@ input {
   padding: 8px 24px;
   width: 400px;
   margin-bottom: 16px;
+}
+
+.header, .footer{
+  display: flex;
+}
+a{
+  text-decoration: none;
+  color: rgb(103, 101, 101)
+}
+
+.footer{
+  background-color: rgb(211, 211, 211, 0.5);
+}
+
+.left-links{
+  margin-right: auto;
+  padding-left: 16px;
+}
+
+.right-links{
+  margin-left: auto;
+  padding-right: 16px;
+}
+
+ul{
+  list-style-type: none;
+  display: flex;
+  gap: 16px;
+  padding-left: 8px;
+}
+
+.content{
+  align-self: center;
+  display: flex;
+  flex-direction: column;
+}
+
+.input{
+  align-self: center;
+}
+
+.buttons{
+  display: flex;
+  justify-content: center;
+  gap: 4px;
 }
